--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 23:05:03 2018</p>
+         Last Run: Sun Nov  4 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>50</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>3</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
@@ -46,23 +46,23 @@
                         <td>9</td>
                         <td>9</td>
                         <td>3</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>18</td>
-                        <td>NW</td>
-                        <td>83</td>
+                        <td>NNW</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>13</td>
-                        <td>45</td>
+                        <td>15</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "6",
+                 "9",
                  "9",
                  "10"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "8",
+                 "9",
                  "9",
                  "10"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
                  "3",
-                 "13"
+                 "3",
+                 "15"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "47",
-                 "45"
+                 "49",
+                 "46",
+                 "44"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "96",
-                 "83",
-                 "72"
+                 "82",
+                 "71"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 23:05:03 2018</p>
+         Last Run: Sun Nov  4 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>14</td>
-                        <td>64</td>
+                        <td>22</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>94</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>11</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>94</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-8</td>
-                        <td>7</td>
-                        <td>70</td>
+                        <td>-5</td>
+                        <td>4</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>E</td>
-                        <td>93</td>
+                        <td>5</td>
+                        <td>ENE</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-7",
                  "-8",
-                 "-8"
+                 "-5"
                ]
              },
              {
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
+                 "22",
                  "11",
-                 "7"
+                 "4"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "67",
-                 "70"
+                 "63",
+                 "66",
+                 "69"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
-                 "93"
+                 "96",
+                 "96",
+                 "95"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 23:05:03 2018</p>
+         Last Run: Sun Nov  4 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 23:05:03 2018</p>
+         Last Run: Sun Nov  4 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -677,11 +677,11 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-4</td>
+                        <td>-3</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>74</td>
                      </tr>
@@ -691,23 +691,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>57</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>68</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>3</td>
-                        <td>55</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>60</td>
+                        <td>66</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>3</td>
+                        <td>56</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-3",
                  "-3",
                  "-2"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "55"
+                 "58",
+                 "58",
+                 "56"
                ]
              },
              {
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "74",
-                 "68",
-                 "60"
+                 "66",
+                 "57"
                ]
              }
            ]
