--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 04:05:03 2018</p>
+         Last Run: Sun Nov  4 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,11 +33,11 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>5</td>
-                        <td>11</td>
+                        <td>8</td>
                         <td>51</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>94</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>9</td>
                         <td>9</td>
                         <td>2</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>19</td>
-                        <td>NNW</td>
+                        <td>18</td>
+                        <td>NW</td>
                         <td>90</td>
                      </tr>
                      <tr>
@@ -57,8 +57,8 @@
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>10</td>
-                        <td>46</td>
+                        <td>19</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
+                 "8",
                  "2",
-                 "10"
+                 "19"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "49",
-                 "46"
+                 "48",
+                 "45"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 04:05:03 2018</p>
+         Last Run: Sun Nov  4 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>15</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -259,25 +259,25 @@
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
-                        <td>-8</td>
-                        <td>7</td>
+                        <td>-9</td>
+                        <td>12</td>
                         <td>63</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>6</td>
-                        <td>66</td>
+                        <td>10</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-8",
+                 "-9",
                  "-9"
                ]
              },
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "15",
-                 "7",
-                 "6"
+                 "12",
+                 "10"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "62",
                  "63",
-                 "63",
-                 "66"
+                 "65"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "94",
-                 "92"
+                 "95",
+                 "93"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 04:05:03 2018</p>
+         Last Run: Sun Nov  4 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -476,21 +476,21 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>3</td>
-                        <td>68</td>
+                        <td>-9</td>
+                        <td>-13</td>
+                        <td>2</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -521,7 +521,7 @@
                "data":[
                  "-13",
                  "-13",
-                 "-14"
+                 "-13"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-9",
                  "-9",
-                 "-10"
+                 "-9"
                ]
              }
            ]
@@ -592,7 +592,7 @@
                "data":[
                  "3",
                  "3",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "62",
                  "63",
-                 "65",
-                 "68"
+                 "65"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 04:05:03 2018</p>
+         Last Run: Sun Nov  4 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -694,8 +694,8 @@
                         <td>52</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>54</td>
+                        <td>WSW</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "58",
-                 "54",
-                 "51"
+                 "53",
+                 "50"
                ]
              }
            ]
