--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 05:05:03 2018</p>
+         Last Run: Sun Nov  4 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>5</td>
-                        <td>8</td>
-                        <td>51</td>
+                        <td>6</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NW</td>
@@ -45,11 +45,11 @@
                         <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>2</td>
+                        <td>16</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>18</td>
-                        <td>NW</td>
+                        <td>19</td>
+                        <td>NNW</td>
                         <td>90</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>10</td>
                         <td>10</td>
                         <td>19</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "2",
+                 "6",
+                 "16",
                  "19"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "48",
-                 "45"
+                 "44"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 05:05:03 2018</p>
+         Last Run: Sun Nov  4 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,14 +253,14 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>12</td>
+                        <td>11</td>
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
@@ -272,12 +272,12 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "15",
-                 "12",
-                 "10"
+                 "11",
+                 "11"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "96",
                  "95",
-                 "95",
-                 "93"
+                 "94"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 05:05:03 2018</p>
+         Last Run: Sun Nov  4 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,9 +464,9 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>0</td>
                      </tr>
@@ -476,21 +476,21 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -521,7 +521,7 @@
                "data":[
                  "-13",
                  "-13",
-                 "-13"
+                 "-14"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-9",
                  "-9",
-                 "-9"
+                 "-10"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
                  "63",
-                 "65"
+                 "64",
+                 "66"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 05:05:03 2018</p>
+         Last Run: Sun Nov  4 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>0</td>
                         <td>3</td>
                         <td>53</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>53</td>
+                        <td>SW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>50</td>
+                        <td>SW</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "0",
                  "0",
                  "0"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "2",
                  "2"
                ]
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "53",
-                 "52",
-                 "50"
+                 "53",
+                 "51"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "53",
-                 "50"
+                 "43",
+                 "38",
+                 "35"
                ]
              }
            ]
